# cash-mesh-backend

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2938af2d820e_create_categories_table.py  4501d1e4d2a3_create_transactions_table.py  4be1019923a4_update_categories_to_shared.py  c7265c5afe17_create_users_table.py
app/: config.py  database.py  main.py
app/crud/: category.py  transaction.py  user.py
app/models/: category.py  transaction.py  user.py
app/routers/: categories.py  transactions.py  users.py
app/schemas/: category.py  transaction.py  user.py
docker/: compose.yaml
tests/: conftest.py  test_categories.py  test_transactions.py  test_users.py
